--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,18 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>InMemoryCRUD</groupId>
-    <artifactId>InMemoryCRUD</artifactId>
+    <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-
-
-
-    <modules>
-        <module>parent</module>
-        <module>client</module>
-        <module>server</module>
-    </modules>
-
-
+    
 </project>
