--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,9 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>InMemoryCRUD</groupId>
+    <parent>
+        <groupId>InMemoryCRUD</groupId>
+        <artifactId>parent</artifactId>
+        <relativePath>../parent/pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+
     <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>Server</name>
+    <packaging>jar</packaging>
+
 
     
 </project>
