first ws test.1

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,7 +30,7 @@
                         <id>generate-sources</id>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
+                            <sourceRoot>${project.basedir}/src/main/java</sourceRoot>
                             <wsdlOptions>
                                 <wsdlOption>
                                     <wsdl>http://localhost:8080/simpleWebService?wsdl</wsdl>
