first ws test.5

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -38,6 +38,11 @@
                                         <extraarg>-impl</extraarg>
                                         <extraarg>-verbose</extraarg>
                                     </extraargs>
+                                    <wsdl>http://localhost:8085/simpleWebService?wsdl</wsdl>
+                                    <extraargs>
+                                        <extraarg>-impl</extraarg>
+                                        <extraarg>-verbose</extraarg>
+                                    </extraargs>
                                 </wsdlOption>
                             </wsdlOptions>
                         </configuration>
