file end point & generated

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -43,6 +43,9 @@
                                 <wsdlOption>
                                     <wsdl>http://localhost:8080/taskEndPoint?wsdl</wsdl>
                                 </wsdlOption>
+                                <wsdlOption>
+                                    <wsdl>http://localhost:8080/fileEndPoint?wsdl</wsdl>
+                                </wsdlOption>
                             </wsdlOptions>
                         </configuration>
                         <goals>
