--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.9.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
 
     </dependencies>
 
