--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>InMemoryCRUD</groupId>
         <artifactId>parent</artifactId>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -23,9 +23,6 @@
 
     <build>
         <plugins>
-
-
-
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-codegen-plugin</artifactId>
@@ -59,8 +56,8 @@
             </plugin>
         </plugins>
     </build>
+
     <dependencies>
     </dependencies>
-
 
 </project>
