--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>InMemoryCRUD</groupId>
         <artifactId>parent</artifactId>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
