--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
