--- a/client/pom.xml
+++ b/client/pom.xml
@@ -34,9 +34,9 @@
                         <configuration>
                             <sourceRoot>${project.basedir}/src/main/java</sourceRoot>
                             <wsdlOptions>
-<!--                                <wsdlOption>
+                                <wsdlOption>
                                     <wsdl>http://localhost:8080/projectEndPoint?wsdl</wsdl>
-                                </wsdlOption>-->
+                                </wsdlOption>
                                 <wsdlOption>
                                     <wsdl>http://localhost:8080/userEndPoint?wsdl</wsdl>
                                 </wsdlOption>
