--- a/client/pom.xml
+++ b/client/pom.xml
@@ -18,6 +18,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <junit.vesion>4.10</junit.vesion>
         <cxf.version>3.2.7</cxf.version>
     </properties>
 
@@ -58,6 +59,12 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.vesion}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
