--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <junit.vesion>4.10</junit.vesion>
     </properties>
 
     <build>
@@ -77,6 +78,12 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.vesion}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
