--- a/server/pom.xml
+++ b/server/pom.xml
@@ -89,6 +89,22 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+            <version>3.1.0.Final</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
+        <!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
